styles/index.module.css
.welcome {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  min-height: 95vh;
  width: 60%;
  margin: auto;
  font-family: "Roboto Mono", monospace;
  gap: 2rem;
}

.welcome h1 {
  margin-top: 6rem;
  font-size: 4rem;
  letter-spacing: 0.2rem;
}

.welcome h2 {
  font-weight: 100;
  word-spacing: 1rem;
  letter-spacing: 0.2rem;
}

.buttonSection {
  margin-top: 6rem;
  width: 80%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

@media (max-width: 700px) {
  .welcome {
    width: 80%;
    height: 100vh;
    gap: 8rem;
  }

  .welcome h1,
  .welcome h2 {
    margin: 0 auto;
  }

  .welcome h1 {
    font-size: 3rem;
    margin-top: 2rem;
  }
  .welcome h2 {
    font-size: 1.5rem;
  }

  .buttonSection {
    margin: 0 auto 2rem auto;
    flex-direction: column;
    gap: 2rem;
  }
}

